Mon Sep  3 00:11:09 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Drop prodVect3D()
	method with two arguments.  Drop apply() method with one argument.
	* src/org/jcae/mesh/amibe/ds/Vertex.java: Add an argument to outer3D()
	to contain outer product.
	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Modify transp() to
	operate on current instance.

Fri Aug 31 17:33:34 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/oemm/OEMM.java: Remove xdelta member, it is
	obsolete.  Make Node.file transient and add a new pathComponents
	member to store component paths.  Serialized OEMM instances should
	now be portable, but serialVersionUID have been modified.
	* src/org/jcae/mesh/amibe/util/QSortedTree.java: Modify remove()
	method signature, it now returns a boolean telling if removed
	object did exist in tree.
	* src/org/jcae/mesh/amibe/util/QSortedTree.java: Modify update()
	method, object is not inserted into tree if it was not already
	present.  This method now returns a boolean telling if object
	did exist in tree.

Fri Aug 31 12:52:40 CEST 2007 Jan Kozusznik <jan.kozusznik@vsb.cz>

	* src/org/jcae/mesh/oemm/OEMM.java: New OEMM.Node.getMaxIndex() and
	OEMM.getDepth() methods.
	* src/org/jcae/mesh/oemm/Storage.java: Implement saveNodes() to store
	modified octants back onto disk.  Add an optional argument to
	loadNodes() to build non-readable triangles.  It is now possible to
	read/modify/store meshes onto disk.
	* src/org/jcae/mesh/amibe/ds/Mesh.java: Fix OuterVertex constructor.
	Implement vertex list, this is needed to save OEMM instances.
	* src/org/jcae/mesh/amibe/algos3d/AbstractAlgoHalfEdge.java
	  src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java: Replace
	f.isOuter() test on triangles by isSkippedTriangle() to also detect
	non-writable triangles.
	* src/org/jcae/mesh/MeshOEMMDecimate.java
	  src/org/jcae/mesh/MeshOEMMViewer3d.java: Minor changes.