@@ -4,8 +4,9 @@ Mon Sep  3 00:11:09 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 	method with two arguments.  Drop apply() method with one argument.
 	* src/org/jcae/mesh/amibe/ds/Vertex.java: Add an argument to outer3D()
 	to contain outer product.
-	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Modify transp() to
-	operate on current instance.
+	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: Modify transp() and
+	inv() to operate on current instance.
+	* src/org/jcae/mesh/amibe/metrics/Metric3D.java: Add clone() method.
 
 Fri Aug 31 17:33:34 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>
 
